--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.josdugan</groupId>
   <artifactId>beer-works-dependencies</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
+  <version>0.0.3-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>beer-works-dependencies</name>
 
@@ -21,6 +21,8 @@
     <jaxb.version>2.3.0</jaxb.version>
     <mapstruct.version>1.4.2.Final</mapstruct.version>
     <spring-statemachine-core.version>2.1.2.RELEASE</spring-statemachine-core.version>
+    <awaitility.version>4.2.0</awaitility.version>
+    <wiremock-extension.version>0.4.0</wiremock-extension.version>
   </properties>
 
   <dependencyManagement>
@@ -50,8 +52,29 @@
         <artifactId>spring-statemachine-core</artifactId>
         <version>${spring-statemachine-core.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.awaitility</groupId>
+        <artifactId>awaitility</artifactId>
+        <version>${awaitility.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.github.JensPiegsa</groupId>
+        <artifactId>wiremock-extension</artifactId>
+        <version>${wiremock-extension.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
+
+  <repositories>
+    <repository>
+      <id>central</id>
+      <url>https://repo1.maven.org/maven2/</url>
+    </repository>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
 
   <distributionManagement>
     <repository>
