--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.josdugan</groupId>
   <artifactId>beer-works-dependencies</artifactId>
-  <version>0.0.4-SNAPSHOT</version>
+  <version>0.0.5-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>beer-works-dependencies</name>
 
@@ -21,9 +21,9 @@
     <jaxb.version>2.3.0</jaxb.version>
     <mapstruct.version>1.4.2.Final</mapstruct.version>
     <spring-statemachine-core.version>2.1.2.RELEASE</spring-statemachine-core.version>
-    <spring-cloud.version>2021.0.3</spring-cloud.version>
     <awaitility.version>4.2.0</awaitility.version>
     <wiremock-extension.version>0.4.0</wiremock-extension.version>
+    <beer-works-cloud-dependencies.version>1.0-SNAPSHOT</beer-works-cloud-dependencies.version>
   </properties>
 
   <dependencyManagement>
@@ -64,9 +64,9 @@
         <version>${wiremock-extension.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
+        <groupId>com.josdugan</groupId>
+        <artifactId>beer-works-cloud-dependencies</artifactId>
+        <version>${beer-works-cloud-dependencies.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -81,6 +81,13 @@
     <repository>
       <id>jitpack.io</id>
       <url>https://jitpack.io</url>
+    </repository>
+    <repository>
+      <id>github</id>
+      <url>https://maven.pkg.github.com/josdugan/*</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
   </repositories>
 
